# protocol

./: .clippy.toml  .env.example  .gitignore  .gitmodules  .tmuxinator.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile.dev  Makefile  README.md  SECURITY.md  TODO.md  cargo.toml  clippy.toml  docker-compose.yml
crates/admin-cli/: Cargo.toml
crates/admin-cli/src/: config.rs  main.rs  secure_key.rs
crates/admin-cli/src/commands/: common.rs  domain.rs  mod.rs  node.rs  pool.rs  provider.rs  test.rs  token.rs  wallet.rs  work.rs
crates/bootnode/: Cargo.toml  Dockerfile
crates/bootnode/src/: main.rs
crates/dev-utils/: Cargo.toml
crates/dev-utils/examples/: blacklist_provider.rs  compute_pool.rs  create_domain.rs  eject_node.rs  get_node_info.rs  invalidate_work.rs  mint_ai_token.rs  set_min_stake_amount.rs  start_compute_pool.rs  submit_work.rs  test_concurrent_calls.rs  transfer_eth.rs  whitelist_provider.rs
crates/discovery/: Cargo.toml  Dockerfile
crates/discovery/src/: lib.rs  location_enrichment.rs  location_service.rs  main.rs
crates/discovery/src/api/: mod.rs  server.rs
crates/discovery/src/chainsync/: sync.rs
crates/discovery/src/store/: mod.rs  node_store.rs  redis.rs
crates/orchestrator/: Cargo.toml  Dockerfile
crates/orchestrator/src/: cli.rs  error.rs  lib.rs  main.rs
crates/orchestrator/src/api/: mod.rs  server.rs
crates/orchestrator/src/blockchain/: event_handlers.rs  event_monitor.rs  integration.rs  mod.rs  usage_example.rs
crates/orchestrator/src/discovery/: location_service.rs  mod.rs  monitor.rs
crates/orchestrator/src/events/: mod.rs
crates/orchestrator/src/metrics/: mod.rs  sync_service.rs  webhook_sender.rs
crates/orchestrator/src/models/: node.rs
crates/orchestrator/src/node/: invite.rs  status_update.rs
crates/orchestrator/src/p2p/: client.rs  mod.rs
crates/orchestrator/src/plugins/: mod.rs  traits.rs
crates/orchestrator/src/scheduler/: mod.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: behaviour.rs  challenge_message.rs  discovery.rs  lib.rs  message.rs  protocol.rs
crates/prime-core/: Cargo.toml
crates/prime-protocol-py/: Cargo.toml  Makefile  README.md  setup.sh
crates/prime-protocol-py/examples/: basic_usage.py  orchestrator.py  orchestrator_list_nodes.py  validator.py  validator_list_nodes.py  worker.py
crates/prime-protocol-py/src/: client.rs  constants.rs  error.rs  lib.rs  message_queue.rs  worker.rs
crates/prime-protocol-py/tests/: test_client.py
crates/python-sdk/: .gitignore  Cargo.toml  Makefile  pyproject.toml  requirements-dev.txt
crates/python-sdk/examples/: orchestrator.py  validator.py  worker.py
crates/python-sdk/src/: lib.rs
crates/python-sdk/tests/: test_validator.py
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/validator/: Cargo.toml  Dockerfile  README.md
crates/validator/src/: cli.rs  handler.rs  lib.rs  main.rs  metrics.rs  validator.rs
crates/worker/: Cargo.toml  build.rs
crates/worker/scripts/: install.sh
crates/worker/src/: cli.rs  lib.rs  main.rs
dev-utils/: Cargo.toml
dev-utils/examples/: compute_pool.rs  create_domain.rs  eject_node.rs  get_node_info.rs  invalidate_work.rs  mint_ai_token.rs  set_min_stake_amount.rs  start_compute_pool.rs  submit_work.rs  transfer_eth.rs  whitelist_provider.rs
dev-utils/tools/: create_domain.rs  set_min_stake_amount.rs  start_chain.rs
discovery/: .env.sample  .eslintrc.json  .prettierrc.json  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  package-lock.json  package.json  tsconfig.json
discovery/__tests__/: app.test.ts  setup.ts
discovery/scripts/: create-pool.ts  get-nodes.ts  get-pool-nodes.ts
discovery/src/: index.ts  main.rs
discovery/src/abi/: ComputePool.json  ComputeRegistry.json  compute_pool.json
discovery/src/api/: server.rs
discovery/src/chainsync/: mod.rs  sync.rs
discovery/src/config/: environment.ts  redis.ts
discovery/src/middleware/: auth.ts
discovery/src/models/: node.rs
discovery/src/routes/: nodes.route.ts
discovery/src/schemas/: apiResponse.schema.ts  node.schema.ts
discovery/src/service/: contract.service.ts  nodes.service.ts
discovery/src/store/: mod.rs  node_store.rs  redis.rs
discovery/src/types/: contract.ts
discovery/src/utils/: ethereum.ts
miner/: .gitignore  Cargo.toml  README.md  makefile
miner/src/: main.rs
miner/src/api/: mod.rs  server.rs
miner/src/cli/: command.rs  mod.rs
miner/src/console/: logger.rs  mod.rs
miner/src/docker/: docker_manager.rs  handler.rs  mod.rs  service.rs  state.rs
miner/src/metrics/: store.rs  types.rs
miner/src/node/: config.rs
miner/src/operations/: compute_node.rs  mod.rs  provider.rs
miner/src/services/: discovery.rs
miner/src/system/: docker.rs  gpu.rs  memory.rs  mod.rs  storage.rs  system_check.rs  types.rs
miner/src/web3/: contract.rs  wallet.rs
orchestrator/: Cargo.toml  Dockerfile  dump.rdb  makefile
orchestrator/src/: main.rs  types.rs
orchestrator/src/api/: mod.rs  server.rs
orchestrator/src/discovery/: monitor.rs
orchestrator/src/models/: node.rs
orchestrator/src/node/: invite.rs  mod.rs  status_update.rs
orchestrator/src/store/: context.rs  heartbeat_store.rs  mod.rs  node_store.rs  redis.rs  task_store.rs
orchestrator/src/types/: node.rs
orchestrator/src/utils/: google_cloud.rs  mod.rs
shared/: Cargo.toml
shared/artifacts/abi/: AIToken.json  ComputePool.json  PrimeNetwork.json  ai_token.json  anvil_base.state  compute_pool.json  compute_registry.json  deployments.json  domain_registry.json  prime_network.json  rewards_distributor.json  synthetic_data_work_validator.json
shared/src/: lib.rs
shared/src/models/: challenge.rs  gpu_challenge.rs  heartbeat.rs  invite.rs  metric.rs  mod.rs  node.rs  task.rs
shared/src/security/: api_key_middleware.rs  auth_signature_middleware.rs  mod.rs  request_signer.rs
shared/src/utils/: google_cloud.rs  mod.rs
shared/src/web3/: mod.rs  wallet.rs
validator/: Cargo.toml  Dockerfile  makefile
validator/src/: main.rs
validator/src/validators/: hardware.rs  hardware_challenge.rs  mod.rs  synthetic_data.rs
(+419 files in other folders)
