[workspace]
members = [
    "crates/discovery",
    "crates/worker",
    "crates/validator",
    "crates/shared",
    "crates/orchestrator",
    "crates/dev-utils",
]
resolver = "2"

[workspace.dependencies]
shared = { path = "crates/shared" }
actix-web = "4.9.0"
clap = { version = "4.5.27", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full", "macros"] }
uuid = { version = "1.12.1", features = ["v4", "serde"] }
log = { version = "0.4.26" }
env_logger = { version = "0.11.6" }
futures-util = { version = "0.3.31" }
alloy = { version = "0.15.7", features = ["full"] }
alloy-provider = { version = "^0.15.7", features = ["anvil-node"] }
url = "2.5.4"
serde_json = "1.0.137"
reqwest = "0.12.12"
hex = "0.4.3"
anyhow = "1.0.95"
toml = "0.8.20"
tokio-util = "0.7.13"
futures = "0.3.31"
chrono = "0.4.40"
directories = "6.0.0"
nalgebra = "0.33.2"
redis = "0.28.1"
redis-test = "0.8.0"
stun = "0.7.0"
mockito = "1.7.0"
iroh = "0.34.1"
rand_v8 = { package = "rand", version = "0.8.5", features = ["std"] }
rand_core_v6 = { package = "rand_core", version = "0.6.4", features = ["std"] }

[workspace.package]
version = "0.3.10"
edition = "2021"

[workspace.lints.clippy]
match_same_arms = "warn"
unused_async = "warn"
uninlined_format_args = "warn"
manual_let_else = "warn"

[workspace.lints.rust]
unreachable_pub = "warn"
