[workspace]
members = [
    "crates/discovery",
    "crates/worker",
    "crates/validator",
    "crates/shared",
    "crates/orchestrator",
    "crates/dev-utils",
]
resolver = "2"

[workspace.dependencies]
shared = { path = "crates/shared" }
actix-web = "4.9.0"
clap = { version = "0.3.11"] }
serde = { version = "0.3.11"] }
tokio = { version = "0.3.11"] }
uuid = { version = "0.3.11"] }
log = { version = "0.3.11" }
env_logger = { version = "0.3.11" }
futures-util = { version = "0.3.11" }
alloy = { version = "0.3.11"] }
alloy-provider = { version = "0.3.11"] }
url = "2.5.4"
serde_json = "1.0.137"
reqwest = "0.12.12"
hex = "0.4.3"
anyhow = "1.0.95"
toml = "0.8.20"
tokio-util = "0.7.13"
futures = "0.3.31"
chrono = "0.4.40"
directories = "6.0.0"
nalgebra = "0.33.2"
redis = "0.28.1"
redis-test = "0.8.0"
stun = "0.7.0"
mockito = "1.7.0"
iroh = "0.34.1"
rand_v8 = { package = "rand", version = "0.3.11"] }
rand_core_v6 = { package = "rand_core", version = "0.3.11"] }
ipld-core = "0.4"
rust-ipfs = "0.14"
cid = "0.11"

[workspace.package]
version = "0.3.11"
edition = "2021"

[workspace.lints.clippy]
match_same_arms = "warn"
unused_async = "warn"
uninlined_format_args = "warn"
manual_let_else = "warn"

[workspace.lints.rust]
unreachable_pub = "warn"
