[package]
name = "dev-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }  
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.6"
eyre = "0.6"  
clap = { version = "4.5.26", features = ["derive"] }
log = "0.4.25"
url = "2.5.4"
alloy = "0.9.2"
tokio-util = "0.7.13"
alloy-node-bindings = "0.9.2"
