[package]
name = "discovery"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
alloy = "0.9.2"
anyhow = "1.0.95"
clap = { version ="4.5.27", features = ["derive"] }
log = "0.4.25"
redis = "0.28.1"
redis-test = "0.8.0"
serde = "1.0.217"
serde_json = "1.0.137"
shared = { path = "../shared" }
tokio = "1.43.0"
tokio-util = "0.7.13"
url = "2.5.4"
