[package]
name = "miner"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
bollard = "0.15"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
lazy_static = "1.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.33", features = ["full"] }
uuid = { version = "1.5", features = ["v4"] }
validator = { version = "0.16", features = ["derive"] }
sysinfo = "0.30"
libc = "0.2"
nvml-wrapper = "0.10.0"
