[package]
name = "miner"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
actix-web = "4.4"
bollard = "0.18.1"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
lazy_static = "1.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.33", features = ["full"] }
uuid = { version = "1.5", features = ["v4"] }
validator = { version = "0.16", features = ["derive"] }
sysinfo = "0.30"
libc = "0.2"
nvml-wrapper = "0.10.0"
log = "0.4"
env_logger = "0.10.0"
cargo-watch = "8.4.1"
futures-core = "0.3"
futures-util = "0.3"
alloy = { version = "0.9.2", features = ["full"] }
url = "2.5.4"
serde_json = "1.0.135"
reqwest = "0.12.12"
hex = "0.4.3"
console = "0.15.10"
indicatif = "0.17.9"
bytes = "1.9.0"
