[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
alloy = "0.9.2"
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
env_logger = "0.11.6"
futures = "0.3.31"
hex = "0.4.3"
log = "0.4.25"
redis = "0.28.1"
redis-test = "0.8.0"
reqwest = "0.12.12"
serde = "1.0.217"
serde_json = "1.0.135"
shared = { path = "../shared" }
tokio = "1.43.0"
url = "2.5.4"
uuid = { version = "1.12.1", features = ["v4", "serde"] }
