[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
name = "shared"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.33", features = ["full"] }
alloy = { version = "0.9.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
url = "2.5.4"