[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
name = "shared"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.33", features = ["full"] }
alloy = { version = "0.9.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
url = "2.5.4"
actix-web = "4.9.0"
futures-util = "0.3.31"
hex = "0.4.3"
uuid = { version = "1.12.1", features = ["v4", "serde"] }
redis = "0.28.1"
