[package]
name = "validator"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web = "4.9.0"
alloy = { version = "0.9.2", features = ["full"] }
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
directories = "6.0.0"
env_logger = "0.11.6"
log = "0.4.25"
nalgebra = "0.33.2"
rand = "0.9.0"
reqwest = "0.12.12"
serde = "1.0.217"
serde_json = "1.0.135"
shared = { path = "../shared" }
tokio = "1.43.0"
toml = "0.8.20"
url = "2.5.4"

[dev-dependencies]
tempfile = "=3.14.0"
