[package]
name = "validator"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web = { workspace = true }
alloy = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
directories = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
nalgebra = { workspace = true }
rand = "0.9.0"
redis = { workspace = true }
redis-test = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = "=3.14.0"
