[package]
name = "dev-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { workspace = true }  
tokio = { workspace = true }
eyre = "0.6"  
clap = { workspace = true }
url = { workspace = true }
alloy = { workspace = true }
tokio-util = { workspace = true }
alloy-node-bindings = "0.9.2"
hex = "0.4.3"
rand = "0.9.1"
