[package]
name = "orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web = { workspace = true }
actix-web-prometheus = "0.1.2"
alloy = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1.88"
base64 = "0.22.1"
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
google-cloud-auth = "0.18.0"
google-cloud-storage = "0.24.0"
hex = { workspace = true }
log = { workspace = true }
prometheus = "0.14.0"
rand = "0.9.0"
redis = { workspace = true, features = ["tokio-comp"] }
redis-test = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }