[package]
name = "orchestrator"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
p2p = { workspace = true}
shared = { workspace = true }
prime-core = { workspace = true }

actix-web = { workspace = true }
alloy = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
redis = { workspace = true, features = ["tokio-comp"] }
redis-test = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

actix-web-prometheus = "0.1.2"
google-cloud-auth = "0.18.0"
google-cloud-storage = "0.24.0"
prometheus = "0.14.0"
rand = "0.9.0"
utoipa = { version = "5.3.0", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web", "debug-embed", "reqwest", "vendored"] }

[dev-dependencies]
mockito = { workspace = true }
