[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
name = "shared"
path = "src/lib.rs"

[features]
default = []
testnet = []

[dependencies]
tokio = { workspace = true }
alloy = { workspace = true }
alloy-provider = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
actix-web = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
redis = { workspace = true }
dashmap = "6.1.0"
anyhow = { workspace = true }
nalgebra = { workspace = true }
log = { workspace = true }
rand = "0.9.0"
google-cloud-storage = "0.24.0"
base64 = "0.22.1"
chrono = { workspace = true, features = ["serde"] }
