[package]
name = "validator"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web = { workspace = true }
alloy = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
directories = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
iroh = { workspace = true }
rand_v8 = { workspace = true }
lazy_static = "1.5.0"
log = { workspace = true }
nalgebra = { workspace = true }
prometheus = "0.14.0"
rand = "0.9.0"
redis = { workspace = true, features = ["tokio-comp"] }
redis-test = { workspace = true }
regex = "1.11.1"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
url = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
tempfile = "=3.14.0"