[package]
name = "validator"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
shared = { workspace = true }
p2p = { workspace = true}

actix-web = { workspace = true }
alloy = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
directories = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
rand_v8 = { workspace = true }
log = { workspace = true }
nalgebra = { workspace = true }
redis = { workspace = true, features = ["tokio-comp"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }

lazy_static = "1.5.0"
prometheus = "0.14.0"
rand = "0.9.0"
regex = "1.11.1"

[dev-dependencies]
mockito = { workspace = true }
redis-test = { workspace = true }
tempfile = "=3.14.0"
