[package]
name = "worker"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { workspace = true }
actix-web = { workspace = true }
bollard = "0.18.1"
clap = { workspace = true }
colored = "2.0"
lazy_static = "1.4"
regex = "1.10"
serde = { workspace = true }
tokio = { workspace = true, features = ["full", "macros"] }
uuid = { workspace = true }
validator = { version = "0.16", features = ["derive"] }
sysinfo = "0.30"
libc = "0.2"
nvml-wrapper = "0.10.0"
log = { workspace = true }
env_logger = { workspace = true }
futures-core = "0.3"
futures-util = { workspace = true }
alloy = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
hex = { workspace = true }
console = "0.15.10"
indicatif = "0.17.9"
bytes = "1.9.0"
anyhow = { workspace = true }
thiserror = "2.0.11"
toml = { workspace = true }
ctrlc = "3.4.5"
tokio-util = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
serial_test = "0.5.1"
directories = { workspace = true }
strip-ansi-escapes = "0.2.1"
nalgebra = { workspace = true }
stun = { workspace = true }
sha2 = "0.10.8"
unicode-width = "0.2.0"
rand = "0.9.0"
tempfile = "3.14.0"
tracing-loki = "0.2.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-log = "0.2.0"
time = "0.3.41"
iroh = { workspace = true }
rand_v8 = { workspace = true }
rand_core_v6 = { workspace = true }
dashmap = "6.1.0"
homedir = "0.3"
