[package]
name = "worker"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
shared = { workspace = true }
p2p = { workspace = true }

actix-web = { workspace = true }
alloy = { workspace = true }
anyhow = { workspace = true }
cid = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
rand_v8 = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
rust-ipfs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
stun = { workspace = true }
tokio = { workspace = true, features = [ "rt-multi-thread" ] }
tokio-util = { workspace = true, features = ["rt"] }
url = { workspace = true }
uuid = { workspace = true }

bollard = "0.18.1"
colored = "2.0"
lazy_static = "1.4"
sysinfo = "0.30"
libc = "0.2"
nvml-wrapper = "0.10.0"
console = "0.15.10"
thiserror = "2.0.11"
serial_test = "0.5.1"
strip-ansi-escapes = "0.2.1"
sha2 = "0.10.8"
unicode-width = "0.2.0"
rand = "0.9.0"
tempfile = "3.14.0"
tracing-loki = "0.2.6"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
time = "0.3.41"
tokio-stream = { version = "0.1.17", features = ["net"] }
homedir = "0.3"
